# cmake-sfml

./: CMakeLists.txt
inc/: main.hpp
src/: main.cpp
